--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,12 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
 	<description>Note Taker Application</description>
 	<servlet>
 		<servlet-name>CreateNote</servlet-name>
-		<display-name>CreateNote</display-name>
-		<description>Servlet for Adding A New Note To DB</description>
 		<servlet-class>servlets.CreateNote</servlet-class>
 	</servlet>
 	<servlet-mapping>
