--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,13 @@
 		<servlet-name>DeletePost</servlet-name>
 		<servlet-class>servlets.DeletePost</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>UpdateNote</display-name>
+		<servlet-name>UpdateNote</servlet-name>
+		<servlet-class>servlets.UpdateNote</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>CreateNote</servlet-name>
 		<url-pattern>/CreateNote</url-pattern>
@@ -31,6 +38,10 @@
 	<servlet-mapping>
 		<servlet-name>DeletePost</servlet-name>
 		<url-pattern>/DeletePost</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdateNote</servlet-name>
+		<url-pattern>/UpdateNote</url-pattern>
 	</servlet-mapping>
 	<resource-ref>
 		<description>DB Connection</description>
